Corrected margins and links

--- a/miracle.html
+++ b/miracle.html
@@ -428,7 +428,7 @@
         <div class="col">
             <img src="./miracle-images/santas.jpg" class="img-responsive" id="santas" width="350" alt="">
             <img src="./miracle-images/rectanglepng.png" class="img-responsive rectangle" width="500" alt="">
-            <a href="https://resy.com/cities/new-york-ny/venues/miracle-on-union?utm_source=Paid&utm_medium=Search&utm_campaign=Reservationships_Evergreen&gad_source=1&gclsrc=aw.ds&date=2024-11-13&seats=2">
+            <a href="https://resy.com/cities/new-york-ny/venues/miracle-on-union?utm_source=Paid&utm_medium=Search&utm_campaign=Reservationships_Evergreen&gad_source=1&gclsrc=aw.ds&date=2024-11-13&seats=2" class="november">
                 <p>Check availability</p>
             </a>
           
@@ -436,7 +436,7 @@
         <div class="col">
             <img src="./miracle-images/santa-alone.jpg" class="img-responsive" id="santa-alone" width="350" alt="">
             <img src="./miracle-images/rectanglepng.png" class="img-responsive rectangle" width="500" alt="">
-            <a href="https://resy.com/cities/new-york-ny/venues/miracle-on-union?utm_source=Paid&utm_medium=Search&utm_campaign=Reservationships_Evergreen&gad_source=1&gclsrc=aw.ds&date=2024-12-01&seats=2">
+            <a href="https://resy.com/cities/new-york-ny/venues/miracle-on-union?utm_source=Paid&utm_medium=Search&utm_campaign=Reservationships_Evergreen&gad_source=1&gclsrc=aw.ds&date=2024-12-01&seats=2" class="december">
                 <p>Check availability</p>
             </a>
             
