--- a/private-booking.html
+++ b/private-booking.html
@@ -45,11 +45,13 @@
     </div>
     <div class="container">
         <header>
-              
+              <img src="./private-booking-images/Home.png" class="img-responsive" width="1200" alt="">
         </header>
-        <div class="container">
-            <img src="images/underconstruction.png" class="img-fluid rounded mx-auto d-block" >
-        </div>
+        <main>
+            <img src="./private-booking-images/About.png" class="img-responsive" width="1200" alt="">
+            <img src="./private-booking-images/Features.png" class="img-responsive" width="1200" alt="">
+            <img src="./private-booking-images/Contact.png" class="img-responsive" width="1200" alt="">
+        </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
