--- a/private-booking.html
+++ b/private-booking.html
@@ -48,9 +48,9 @@
               <img src="./private-booking-images/Home.png" class="img-responsive" width="1200" alt="">
         </header>
         <main>
-            <img src="./private-booking-images/About.png" class="img-responsive" width="1200" alt="">
-            <img src="./private-booking-images/Features.png" class="img-responsive" width="1200" alt="">
-            <img src="./private-booking-images/Contact.png" class="img-responsive" width="1200" alt="">
+            <img src="./private-booking-images/About.png" class="about img-responsive" width="1200" alt="">
+            <img src="./private-booking-images/Features.png" class="features img-responsive" width="1200" alt="">
+            <img src="./private-booking-images/Contact.png" class="contact img-responsive" width="1200" alt="">
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
