Edited CSS and updated links

--- a/about.html
+++ b/about.html
@@ -46,38 +46,32 @@
         </div>
         <div class="container">
             <header> 
-                <img src="./about-images/about-header.png" class="img-responsive header-image" id="top"  width="1500" alt="">
+                <img src="./about-images/about-header.png" class="img-fluid header-image" id="top"  width="" alt="">
             </header>
             <main>
                <div class="john-about-picture">
-                <img src="./about-images/john-about-picture.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/john-about-picture.png" class="img-fluid" width="" alt="">
                </div>
                <div class="bio">
-                <img src="./about-images/bio.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/bio.png" class="img-fluid" width="" alt="">
                </div>
                <div class="our-vision">
-                <img src="./about-images/our-vision.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/our-vision.png" class="img-fluid" width="" alt="">
                </div>
                <div class="inspiration">
-                <img src="./about-images/inspiration.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/inspiration.png" class="img-fluid" width="" alt="">
                </div>
                <div class="our-mission">
-                <img src="./about-images/our-mission.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/our-mission.png" class="img-fluid" width="" alt="">
                </div>
                <div class="the-vibe">
-                <img src="./about-images/the-vibe.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/the-vibe.png" class="img-fluid" width="" alt="">
                </div>
                <div class="vibe-pictures">
-                <img src="./about-images/vibe-pictures.png" class="img-responsive" width="1500" alt="">
+                <img src="./about-images/vibe-pictures.png" class="img-fluid" width="" alt="">
                </div>
                <div class="end-pictures">
-                <img src="./about-images/end-pictures.png" class="img-responsive" width="1500" alt="">
-               </div>
-               <div class="nav-up">
-                <a href="#top">
-                    <img src="./icons/arrow-up.png" class="img-responsive nav-up-about" width="40" alt="">
-                </a>
-                
+                <img src="./about-images/end-pictures.png" class="img-fluid" width="" alt="">
                </div>
             </main>
     </div>
