--- a/menu.html
+++ b/menu.html
@@ -45,15 +45,15 @@
     </div>
     <div class="container">
         <div class="happy-hour" id="top">
-        <img src="./menu-images/happy-hour.png" class="img-responsive" width="750" alt="">
+        <img src="./menu-images/happy-hour.png" class="img-fluid" width="" alt="">
         </div>
       
         <div class="wine-list">
-            <img src="./menu-images/wine-list.jpg" class="img-responsive wine-image" width="1200" alt="">
+            <img src="./menu-images/wine-list.jpg" class="img-fluid wine-image" width="" alt="">
         </div>
 
         <div class="cocktails">
-            <img src="./menu-images/cocktails.jpg" class="img-responsive cocktail-menu" width="1200" alt="">
+            <img src="./menu-images/cocktails.jpg" class="img-fluid cocktail-menu" width="" alt="">
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
