--- a/home.html
+++ b/home.html
@@ -46,33 +46,33 @@
     </div>
     <div class="container">
         <header>
-          <img src="./home-images/thick-ad-thieves.png" class="img-responsive thick" width="1500" alt="">
+          <img src="./home-images/thick-ad-thieves.png" class="img-fluid" width="" alt="">
         </header>
         <main>
-          <img src="./home-images/ay-yo.png" class="img-responsive aye" width="1500" alt="">
+          <img src="./home-images/ay-yo.png" class="img-fluid aye" width="" alt="">
             <div class="menu-page">
-                <img src="./home-images/menu-background.png" class="img-responsive menu-background"  alt="">
-             <img src="./home-images/menu-links.png" class="img-responsive menu" width="1500" alt="">
+                
+             <img src="./home-images/menu-links.png" class="img-fluid menu" width="" alt="">
              <div class="row menu-buttons">
                 <div class="col">
                     <a href="./menu.html">
-                    <img src="./home-images/peep-menu.png" class="img-responsive peep" width="300" alt="">
+                    <img src="./home-images/peep-menu.png" class="img-fluid peep" width="220" alt="">
                 </a>
                 </div>
                 <div class="col">
                     <a href="./menu.html">
-                    <img src="./home-images/cop-deals.png" class="img-responsive deals" width="300" alt="">
+                    <img src="./home-images/cop-deals.png" class="img-fluid deals" width="220" alt="">
                 </a>
                 </div>
                 <div class="col">
                     <a href="./menu.html">
-                    <img src="./home-images/get-fed.png" class="img-responsive fed" width="300" alt="">
+                    <img src="./home-images/get-fed.png" class="img-fluid fed" width="220" alt="">
                 </a>
                 </div>
              </div>
             </div>
-            <img src="./home-images/lets-link.png" class="img-responsive lets-link" width="1500" alt="">
-            <img src="./home-images/hours.png" class="img-responsive hours" width="1500" alt="">
+            <img src="./home-images/lets-link.png" class="img-fluid lets-link" width="" alt="">
+            <img src="./home-images/hours.png" class="img-fluid hours" width="" alt="">
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
