Edited CSS and bootstrap

--- a/miracle.html
+++ b/miracle.html
@@ -51,9 +51,9 @@
         <div class="experience-ghosts" id="top">
             <img src="./miracle-images/experience-christmas.png" class="img-fluid" width="" alt="">
                 <img src="./miracle-images/past-present-future.png" class="img-fluid" alt="">
-                <div class="container d-flex">
-                <div class="row nav-buttons">
-                    <div class="col">
+               
+                <div class="row">
+                    <div class="col-sm no-gutters">
                         <a href="#buzz">
                             <img src="./miracle-images/press-x.png" class="img-fluid" width="" height="" alt="">
                         </a>
@@ -74,12 +74,12 @@
                          </a>
                     </div>
                     </div>
-                </div>
+                
                     <img src="./miracle-images/nav-info.png" class="img-fluid" alt="">
             </div>
-        <div class="buzz-from-the-past d-flex" id="buzz">
-                    <img src="./miracle-images/buzz.png" class="img-fluid" width="350" alt="">
-                <div class="container buzz-links">
+        <div class="buzz-from-the-past" id="buzz">
+                    <img src="./miracle-images/buzz.png" class="img-fluid position-absolute translate-middle-x start-2 z-n1" width="500" height="" alt="">
+                <div class="buzz-links p-5 m-5">
                 <div class="row">
                     <div class="col">
                         <a href="https://www.timeout.com/newyork/news/miracle-pop-up-bars-are-back-in-nyc-with-festive-cocktails-and-wacky-drinkware-112122" target="_blank">
@@ -117,33 +117,33 @@
             </div>
         </div>
     <div class="drinks" id="drinks">
-        <div class="drinks-one" id="drinks-one">
+        <div class="drinks-one p-5 m-2" id="drinks-one">
             <div class="row">
                 <div class="col">
                     <a href="#christmapolitan">
-                        <img src="./miracle-images/christmapolitan.png" class="img-fluid" width=""  alt="">         
+                        <img src="./miracle-images/christmapolitan.png" class="img-fluid p-2" width=""  alt="">         
                     </a>
                 </div>
                 <div class="col">
                     <a href="#snowball">
-                        <img src="./miracle-images/snowball.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/snowball.png" class="img-fluid p-2" width="" alt="">
                     </a>
                 </div>
-            </div>
-            <div class="row">
+                </div>
+                <div class="row">
                 <div class="col">
                     <a href="#stocking-stuffer">
-                        <img src="./miracle-images/stocking-stuffer.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/stocking-stuffer.png" class="img-fluid p-2" width="" alt="">
                     </a>
                 </div>
                 <div class="col">
                     <a href="#christmasaurus">
-                        <img src="./miracle-images/christmasaurus.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/christmasaurus.png" class="img-fluid p-2" width="" alt="">
                     </a> 
                 </div>
-            </div>
-        </div>
-        <div class="drinks-two" id="drinks-two">
+                </div>
+            </div>      
+        <div class="drinks-two d-flex p-2 m-5" id="drinks-two">
             <div class="row">
                 <div class="col">
                     <a href="#crooked-antler">
@@ -167,33 +167,33 @@
                 </div>
             </div>
         </div>
-        <div class="drinks-three" id="drinks-three">
+        <div class="drinks-three p-5 m-2" id="drinks-three">
             <div class="row">
                 <div class="col">
                     <a href="#koala">
-                        <img src="./miracle-images/koala.png" class="img-fluid" width=""  alt="">         
+                        <img src="./miracle-images/koala.png" class="img-fluid p-2" width=""  alt="">         
                     </a>
                 </div>
                 <div class="col">
                     <a href="#yippie">
-                        <img src="./miracle-images/yippie.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/yippie.png" class="img-fluid p-2" width="" alt="">
                     </a>
                 </div>
             </div>
             <div class="row bottom">
                 <div class="col">
                     <a href="#jingle-balls">
-                        <img src="./miracle-images/jingle-balls.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/jingle-balls.png" class="img-fluid p-2" width="" alt="">
                     </a>
                 </div>
                 <div class="col">
                     <a href="#krampus">
-                        <img src="./miracle-images/krampus.png" class="img-fluid" width="" alt="">
+                        <img src="./miracle-images/krampus.png" class="img-fluid p-2" width="" alt="">
                     </a> 
                 </div>
             </div>
         </div>
-        <div class="drinks-four" id="drinks-four">
+        <div class="drinks-four d-flex p-2 m-5" id="drinks-four">
             <div class="row">
                 <div class="col">
                     <a href="#hot-buttered">
@@ -220,49 +220,65 @@
     </div>
     <div class="recipes">
         <img src="./recipes-images/christmapolitan.png" class="img-fluid" id="christmapolitan" alt="">
-                <a href="#drinks-one">Back to drinks</a>
+                <a href="#drinks-one">
+                    <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/snowball.png" class="img-fluid" id="snowball" alt="">
-                <a href="#drinks-one">Back to drinks</a>
+        <a href="#drinks-one">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/stocking-stuffer.png" class="img-fluid" id="stocking-stuffer" alt="">
-            <a href="#drinks-one">Back to drinks </a>
+        <a href="#drinks-one">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/christmasaurus.png" class="img-fluid" id="christmasaurus"
         alt="">
-            <a href="#drinks-one">Back to drinks/a>
+        <a href="#drinks-two">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/crooked-antler.png" class="img-fluid" id="crooked-antler"
         alt="">
-            <a href="#drinks-two">Back to drinks</a>
+        <a href="#drinks-two">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/santa-slide.png" class="img-fluid" id="santa-slide" 
         alt="">
-            <a href="#drinks-two">Back to drinks</a>
+        <a href="#drinks-two">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/run-reindeer.png" class="img-fluid" id="run-reindeer"
         alt="">
-            <a href="#drinks-two">Back to drinks</a>
+        <a href="#drinks-two">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/rudoplhs-replacement.png" class="img-fluid" id="rudolphs-replacement" 
         alt="">
-            <a href="#drinks-two">Back to drinks</a>
+        <a href="#drinks-two">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/koala.png" class="img-fluid" id="koala"
         alt="">
-            <a href="#drinks-three">Back to drinks</a>
+        <a href="#drinks-three">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/yippie.png" class="img-fluid" id="yippie" alt="">
-            <a href="#drinks-three">Back to drinks</a>
+        <a href="#drinks-three">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/jingle-balls.png" class="img-fluid" id="jingle-balls"
         alt="">
-            <a href="#drinks-three">Back to drinks</a>
+        <a href="#drinks-three">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/krampus.png" class="img-fluid" id="krampus"
         alt="">
-            <a href="#drinks-three">Back to drinks</a>
+        <a href="#drinks-three">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/hot-buttered.png" class="img-fluid" id="hot-buttered"
         alt="">
-            <a href="#drinks-four">Back to drinks</a>
+        <a href="#drinks-four">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/naughty-nice.png" class="img-fluid" id="naughty-nice"
         alt="">
-            <a href="#drinks-four">Back to drinks</a>
+        <a href="#drinks-four">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/mulled-wine.png" class="img-fluid" id="mulled-wine"
         alt="">
-            <a href="#drinks-four">Back to drinks</a>
+        <a href="#drinks-four">
+            <p class="text-end">Back to drinks</p></a>
         <img src="./recipes-images/secret-santa.png" class="img-fluid" id="secret-santa"
         alt="">
-            <a href="#drinks-four">Back to drinks</a>
+        <a href="#drinks-four">
+            <p class="text-end">Back to drinks</p></a>
     </div>
     <div class="faqs">
         <img src="./miracle-images/faqs.png" class="img-fluid" id="faqs" width="" alt="">
@@ -301,6 +317,7 @@
     <footer>
         <a href="#top">Back to top</a>
     </footer>
+</div>
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
