Edited CSS, injected images into Private booking

--- a/private-booking.html
+++ b/private-booking.html
@@ -44,12 +44,18 @@
       </div>
     </div>
     <div class="container">
-        <header>
-              <img src="./private-booking-images/Home.png" class="img-fluid" width="" alt="">
+        <header class="booking-header">
+            <a class="link-opacity-10" href="#form">
+                <p>Booking inquiry</p>
+            </a>
         </header>
         <main>
             <img src="./private-booking-images/About.png" class="about img-fluid" width="" alt="">
             <img src="./private-booking-images/Features.png" class="features img-fluid" width="" alt="">
+            <img src="./private-booking-images/events.png" class="img-fluid" alt="">
+            <img src="./private-booking-images/food-and-bev.png" class="img-fluid" alt="">
+            <img src="./private-booking-images/next-level.png" class="img-fluid" alt="">
+            <img src="./private-booking-images/form.png" class="img-fluid" alt="">
             <img src="./private-booking-images/Contact.png" class="contact img-fluid" width="" alt="">
         </main>
     </div>
