Injected booking form & edited CSS

--- a/menu.html
+++ b/menu.html
@@ -44,17 +44,11 @@
       </div>
     </div>
     <div class="container">
-        <div class="happy-hour" id="top">
-        <img src="./menu-images/happy-hour.png" class="img-fluid" width="" alt="">
-        </div>
-      
-        <div class="wine-list">
-            <img src="./menu-images/wine-list.jpg" class="img-fluid wine-image" width="" alt="">
-        </div>
-
-        <div class="cocktails">
-            <img src="./menu-images/cocktails.jpg" class="img-fluid cocktail-menu" width="" alt="">
-        </div>
+        <div class="container"  id="menus" >
+        <img src="./menu-images/happy-hour.png" class="img-fluid happy-hour" width="" alt="">
+            <img src="./menu-images/wine-list.jpg" class="img-fluid" width="" alt="">
+            <img src="./menu-images/cocktails.jpg" class="img-fluid" width="" alt="">
+            <img src="./menu-images/food-menu.png" class="img-fluid" alt="">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
