Updated email links

--- a/private-booking.html
+++ b/private-booking.html
@@ -64,7 +64,7 @@
            <img src="./private-booking-images/form.png" class="img-fluid form" width="" alt="">
         </div>
         <div class="col p-0">
-                <form method="post" action="send_email.php" method="post" class="booking-form">
+                <form method="post" action="mailto:stephanie@thiefnyc.com cc=john@thiefnyc.com" method="post" class="booking-form">
                     <div class="booking">
                     <label for="name">First & Last name</label>
                     <br />
@@ -91,7 +91,7 @@
                         <input type="text" name="requests" aria-rowcount="3" id="requests" required/>
                         <br />
                         <br />
-                        <input type="submit" value="SEND"/>
+                        <input type="submit" value="SUMBIT"/>
                     </div>
                 </form>
             </div>
